--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
+    "@wdio/allure-reporter": "^5.22.4",
     "@wdio/cli": "^5.22.4",
     "@wdio/cucumber-framework": "^5.20.0",
     "@wdio/local-runner": "^5.22.4",
@@ -23,11 +24,15 @@
     "chromedriver": "^80.0.1",
     "deepmerge": "4.2.2",
     "wdio-chromedriver-service": "^5.0.2",
-    "wdio-cucumberjs-json-reporter": "^1.1.3"
+    "wdio-cucumberjs-json-reporter": "^1.1.3",
+    "wdio-json-reporter": "^1.4.0"
   },
   "dependencies": {
+    "apickli": "^2.3.3",
+    "cucumber-assert": "^2.0.1",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
+    "gulp-cucumber": "0.0.24",
     "yargs": "^15.3.1"
   }
 }
