--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "@wdio/sync": "^5.20.1",
     "chromedriver": "^80.0.1",
     "deepmerge": "4.2.2",
-    "wdio-chromedriver-service": "^5.0.2",
-    "wdio-cucumberjs-json-reporter": "^1.1.3",
-    "wdio-json-reporter": "^1.4.0"
+    "wdio-chromedriver-service": "^5.0.2"
   },
   "dependencies": {
     "apickli": "^2.3.3",
@@ -33,6 +31,7 @@
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-cucumber": "0.0.24",
+    "gulp-webdriver": "^3.0.0",
     "yargs": "^15.3.1"
   }
 }
