--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp": "^4.0.2",
     "gulp-cucumber": "0.0.24",
     "gulp-webdriver": "^3.0.0",
+    "multiple-cucumber-html-reporter": "^1.16.0",
+    "wdio-json-cucumber-reporter": "^1.2.4",
     "yargs": "^15.3.1"
   }
 }
