--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/wdio ./wdiov5/config/wdio.conf.js",
-    "api-test": "./node_modules/.bin/wdio ./wdiov5/config/apiTest.conf.js"
+    "api-test": "./node_modules/.bin/wdio ./wdiov5/config/apiTest.conf.js",
+    "bs-single": "./node_modules/.bin/wdio ./wdiov5/config/bs-single.conf.js",
+    "bs-parallel": "./node_modules/.bin/wdio ./wdiov5/config/bs-parallel.conf.js"
   },
   "author": "Sachin Jadhav",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
     "@wdio/allure-reporter": "^5.22.4",
+    "@wdio/browserstack-service": "^6.0.17",
     "@wdio/cli": "^5.22.4",
     "@wdio/cucumber-framework": "^5.20.0",
     "@wdio/local-runner": "^5.22.4",
@@ -28,6 +31,7 @@
   },
   "dependencies": {
     "apickli": "^2.3.3",
+    "browserstack-local": "^1.4.5",
     "cucumber-assert": "^2.0.1",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
