--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chromedriver": "^80.0.1",
     "deepmerge": "4.2.2",
     "wdio-chromedriver-service": "^5.0.2",
+    "@wdio/selenium-standalone-service": "^6.11.0",
     "wdio-json-reporter": "^1.4.0"
   },
   "dependencies": {
